добавлен lang=ru и подробности в тексте на странице авторизации

--- a/UI/Pages/AuthorizePage.razor
+++ b/UI/Pages/AuthorizePage.razor
@@ -10,7 +10,7 @@
     <RadzenColumn>
         <h3>Пожалуйста, авторизуйтесь</h3>
         <RadzenCard>
-            <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Логин</RadzenText>
+            <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Логин (можно придумать новый)</RadzenText>
             <RadzenTextBox @oninput=@(args=>login=args.Value?.ToString()) Style="width: 100%" @onkeydown="HandleKeyDown" @ref=input />
             @if (errorMessage != null)
             {
